--- a/www/assets/scss/_app.scss
+++ b/www/assets/scss/_app.scss
@@ -527,6 +527,7 @@ body.header__menu-active {
       overflow-y: auto;
     }
     @media screen and (min-width: 1024px){
+      max-height: calc(100vh - 200px);
       max-height: max-content;
       position: relative;
       max-width: calc(90vw - 300px)!important;
