--- a/www/assets/scss/_card-client.scss
+++ b/www/assets/scss/_card-client.scss
@@ -208,7 +208,7 @@
 
     }
     @media screen and (min-width: 1440px) {
-
+      max-width: 100%;
     }
   }
   .card__heading {
@@ -438,7 +438,7 @@
         text-align: right;
       }
       @media screen and (min-width: 1280px) {
-
+        max-width: 100%;
       }
       @media screen and (min-width: 1440px) {
 
